log
Thu Mar 12 07:15:02 PM UTC 2026: 
 tests:  1|4
total_score: 10/70
c2981aa
Thu Mar 19 07:12:45 PM UTC 2026: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:70:23: error: ‘elmento’ undeclared (first use in this function); did you mean ‘elemento’?
   70 |          if ((*(int*) elmento) == elem) popcurrent( L );
      |                       ^~~~~~~
      |                       elemento
exercises.c:70:23: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:70:41: error: implicit declaration of function ‘popcurrent’; did you mean ‘popCurrent’? [-Wimplicit-function-declaration]
   70 |          if ((*(int*) elmento) == elem) popcurrent( L );
      |                                         ^~~~~~~~~~
      |                                         popCurrent
faf85a8
Thu Mar 19 07:13:07 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:70:23: error: ‘elmento’ undeclared (first use in this function); did you mean ‘elemento’?
   70 |          if ((*(int*) elmento) == elem) popCurrent( L );
      |                       ^~~~~~~
      |                       elemento
exercises.c:70:23: note: each undeclared identifier is reported only once for each function it appears in
cb7675d
Thu Mar 19 07:14:36 PM UTC 2026: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:72:25: error: expected ‘;’ before ‘}’ token
   72 |       elemento = next(L)
      |                         ^
      |                         ;
   73 | 
   74 | }
      | ~                        
7a54de0
Thu Mar 19 07:14:39 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:72:25: error: expected ‘;’ before ‘}’ token
   72 |       elemento = next(L)
      |                         ^
      |                         ;
   73 | 
   74 | }
      | ~                        
3b58b45
